--- a/templates/MainForum.html
+++ b/templates/MainForum.html
@@ -6,10 +6,13 @@
     <title>Main Page</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: rgba(197, 197, 197, 0.2);
+        background: linear-gradient(to bottom, rgba(255, 255, 255, 1), {{ request.session.color|default:'rgb(115, 126, 126)' }});
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        height: 100vh;
             margin: 0;
             padding: 0;
+            font-family: Arial, sans-serif;
         }
         .container {
             display: flex;
@@ -149,25 +152,27 @@
             font-size: 16px; /* Increase the font size */
         }
         button {
-    background-color: #5e5959; /* Green background */
-    border: none; /* Remove border */
-    color: white; /* White text */
-    padding: 10px 14px; /* Some padding */
-    text-align: center; /* Centered text */
-    text-decoration: none; /* Remove underline */
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer; /* Mouse pointer on hover */
-    transition-duration: 0.4s; /* Transition effects */
-    border-radius: 12px; /* Rounded corners */
-}
+        background-color: #5e5959; /* Green background */
+        border: none; /* Remove border */
+        color: white; /* White text */
+        padding: 10px 14px; /* Some padding */
+        text-align: center; /* Centered text */
+        text-decoration: none; /* Remove underline */
+        display: inline-block;
+        font-size: 16px;
+        margin: 4px 2px;
+        cursor: pointer; /* Mouse pointer on hover */
+        transition-duration: 0.4s; /* Transition effects */
+        border-radius: 12px; /* Rounded corners */
+    }
 
-button:hover {
-    background-color: #45a049; /* Green background on hover */
-    color: white; /* White text on hover */
-}
-
+    button:hover {
+        background-color: #45a049; /* Green background on hover */
+        color: white; /* White text on hover */
+    }
+    body.dark-mode {
+        background: linear-gradient(to bottom, rgb(164, 164, 164), rgb(91, 91, 91));
+    }
     </style>
 </head>
 <body>
@@ -184,7 +189,6 @@ button:hover {
          width: 200px;
          height: 50px;
         "onclick="location.href='/blog/32'">פורום הנדסת תוכנה כללי</button> <br>
-
         <div class="year-headers">
             <div class="year">
                 <h2>שנה רביעית</h2>
@@ -247,6 +251,12 @@ button:hover {
 </div>
 
 <script>
+    if ("{{ request.session.dark_mode }}" === "True") {
+        document.body.classList.add('dark-mode');
+        console.log('Dark mode enabled');
+    } else {
+        console.log('Dark mode disabled');
+    }
     function toggleSidebar(event) {
         event.stopPropagation();
         const sidebar = document.getElementById('sidebar');
