--- a/templates/blog.detail.html
+++ b/templates/blog.detail.html
@@ -5,11 +5,17 @@
     <title>{{ blog.title }}</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            background: linear-gradient(to bottom, rgba(255, 255, 255, 1), {{ request.session.color|default:'rgb(115, 126, 126)' }});
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            height: 100vh;
             margin: 0;
             padding: 0;
-            background-color: rgba(197, 197, 197, 0.2);
+            font-family: Arial, sans-serif;
             direction: rtl;
+        }
+        body.dark-mode {
+                      background: linear-gradient(to bottom, rgb(164, 164, 164), rgb(91, 91, 91));
         }
         header {
             background-color: rgba(126, 126, 126, 0.26);
@@ -271,6 +277,12 @@
     </div>
 
     <script>
+    if ("{{ request.session.dark_mode }}" === "True") {
+        document.body.classList.add('dark-mode');
+        console.log('Dark mode enabled');
+    } else {
+        console.log('Dark mode disabled');
+    }
         function toggleSidebar(event) {
         event.stopPropagation();
         const sidebar = document.getElementById('sidebar');
