--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -5,14 +5,13 @@
     <title>Post Detail</title>
     <style>
         body {
-            background-repeat: no-repeat;
+          background-repeat: no-repeat;
             background-attachment: fixed;
-            height: 100vh;
+            height: 100%;
+            width: 100%;
             margin: 0;
             padding: 0;
             font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
             direction: rtl;
             background: linear-gradient(to bottom, rgba(255, 255, 255, 1), {{ request.session.color|default:'rgb(115, 126, 126)' }});
         }
