--- a/templates/About_us.html
+++ b/templates/About_us.html
@@ -15,6 +15,17 @@
             font-weight: bold; /* make the text bold */
             text-align: center; /* center the text */
         }
+        body {
+            background: linear-gradient(to bottom, rgba(255, 255, 255, 1), {{ request.session.color|default:'rgb(115, 126, 126)' }});
+              background-repeat: no-repeat;
+            background-attachment: fixed;
+            height: 100%;
+            width: 100%;
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+            direction: rtl;
+        }
     </style>
 </head>
 <body>
