--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -90,7 +90,7 @@
         }
    .comment {
        background-color: rgba(162, 153, 145, 0.08);
-       box-shadow: 0 2px 4px rgb(255, 255, 255);
+       box-shadow: 0 2px 4px rgba(8, 114, 108, 0.88);
         border-radius: 5px;
         margin-bottom: 30px; /* adjust as needed */
         word-wrap: break-word
