--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -5,9 +5,9 @@
     <title>Post Detail</title>
     <style>
         body {
-          background-repeat: no-repeat;
+            background-repeat: no-repeat;
             background-attachment: fixed;
-            height: 100%;
+            height: 100vh;
             width: 100%;
             margin: 0;
             padding: 0;
