--- a/templates/blog.detail.html
+++ b/templates/blog.detail.html
@@ -5,10 +5,10 @@
     <title>{{ blog.title }}</title>
     <style>
         body {
-            background: linear-gradient(to bottom, rgba(255, 255, 255, 1), {{ request.session.color|default:'rgb(115, 126, 126)' }});
-              background-repeat: no-repeat;
-            background-attachment: fixed;
-            height: 100%;
+        background: linear-gradient(to bottom, rgba(255, 255, 255, 1), {{ request.session.color|default:'rgb(115, 126, 126)' }});
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        height: 100vh;
             width: 100%;
             margin: 0;
             padding: 0;
