--- a/templates/My_Profile.html
+++ b/templates/My_Profile.html
@@ -57,8 +57,8 @@
             margin-bottom: 20px;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 5);
             position: relative;
-            margin-right: 20px;
-            margin-left: 500px;
+           word-wrap: break-word;
+
         }
         header {
             background-color: rgba(126, 126, 126, 0.26);
@@ -113,6 +113,33 @@
         label[for="select_year"], label[for="first_name"], label[for="last_name"], label[for="email"]{
             padding-right: 20px;
         }
+           #notification-container {
+    position: absolute;
+    top: 23px;
+    left: 350px;
+}
+             .top-left {
+            position: absolute;
+            top: 0px;
+            right: 0;
+        }
+
+button {
+    /* Add styles to make the buttons similar to other pages */
+  background-color: rgba(16, 126, 243, 0.88);
+            color: #fff;
+            border: none;
+            padding: 10px 20px;
+            border-radius: 5px;
+            cursor: pointer;
+            margin-bottom: 20px;
+}
+button:hover {
+    background-color: #237ccc; /* Change to the desired color */
+}
+
+
+
     </style>
 </head>
 <header>
@@ -123,9 +150,12 @@
     <span>&#x1F514;</span> <!-- This is a Unicode bell symbol -->
     <span id="notification-counter"></span>
 </div>
+     <a href="{% url '' %}" class="top-left">
+            <img src="https://i.imgur.com/YAy1rDP.png" alt="Clickable image" width="250" height="75" class="invert-color">
+        </a>
 </header>
 <body>
-
+<div class="container">
     <form method="post" action=".">
         {% csrf_token %}
         <label for="first_name">שם פרטי:</label><br>
@@ -136,10 +166,19 @@
         <input type="email" id="email" name="email" value="{{ user.email }}" readonly style="background-color: #ada7a7;"><br>
         {% if user_type == 'student' %}
         <label for="select_year">שנת לימוד:</label><br>
-        <input type="text" id="select_year" name="select_year" value="{{ user.select_year }}"><br>
+        <input type="text" id="select_year" name="select_year" value="{{ user.select_year }}">
+        <select id="select_year" name="select_year">
+            <option value="1" {% if user.select_year == '1' %}selected{% endif %}>1</option>
+            <option value="2" {% if user.select_year == '2' %}selected{% endif %}>2</option>
+            <option value="3" {% if user.select_year == '3' %}selected{% endif %}>3</option>
+            <option value="4" {% if user.select_year == '4' %}selected{% endif %}>4</option>
+        </select>
         {% endif %}
-        <button type="submit">עדכן פרופיל</button>
+        <br><br>
+        <button type="submit">עדכן פרטים</button>
     </form>
+
+
 
     <button id="myPostsButton" onclick="togglePosts()">הפוסטים שלי</button> <br><br><br>
     <div class="sidebar" id="sidebar">
@@ -165,7 +204,8 @@
         </div>
     </a>
 {% endfor %}
-
+    </div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script>
         function togglePosts() {
             var posts = document.getElementsByClassName('post');
@@ -190,6 +230,14 @@
             sidebar.style.left = "-250px";
         }
     });
+
+    function updateNotificationCounter() {
+        $.get('/notifications/unseen_count/', function(data) {
+            $('#notification-counter').text(data.unseen_count);
+        });
+    }
+    updateNotificationCounter();
+    setInterval(updateNotificationCounter, 5000);
     </script>
 </body>
 </html>
