--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -87,6 +87,7 @@
             margin-bottom: 20px;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 5);
             position: relative;
+             word-wrap: break-word;
         }
    .comment {
        background-color: rgba(162, 153, 145, 0.08);
