--- a/templates/settings.html
+++ b/templates/settings.html
@@ -21,6 +21,7 @@
             justify-content: center; /* Center items horizontally */
             align-items: center;
             position: relative; /* Make header a relative container */
+            height: 65px;
         }
         .menu-icon {
             cursor: pointer;
@@ -86,6 +87,12 @@
             cursor: pointer;
             position: relative;
         }
+
+    h2 {
+        direction: rtl;
+        font-size: 2em;
+        line-height: 1.5;
+    }
         body.dark-mode {
         background: linear-gradient(to bottom, rgb(164, 164, 164), rgb(91, 91, 91));
         }
