--- a/templates/settings.html
+++ b/templates/settings.html
@@ -92,6 +92,7 @@
         direction: rtl;
         font-size: 2em;
         line-height: 1.5;
+        margin: 0px;
     }
         body.dark-mode {
         background: linear-gradient(to bottom, rgb(164, 164, 164), rgb(91, 91, 91));
@@ -120,7 +121,7 @@
 </div>
     </header>
      <a href="{% url '' %}" class="top-left">
-            <img src="https://i.imgur.com/YAy1rDP.png" alt="Clickable image" width="250" height="75" class="invert-color">
+            <img src="https://i.imgur.com/YAy1rDP.png" alt="Clickable image" width="250" height="61" class="invert-color">
         </a>
 <div class="container">
 <form action="{% url 'settings' %}" method="post">
