--- a/templates/My_Profile.html
+++ b/templates/My_Profile.html
@@ -123,6 +123,7 @@
         direction: rtl;
         font-size: 2em;
         line-height: 1.5;
+margin: 0;
     }
              .top-left {
             position: absolute;
@@ -157,7 +158,7 @@ button:hover {
     <span id="notification-counter"></span>
 </div>
      <a href="{% url '' %}" class="top-left">
-            <img src="https://i.imgur.com/YAy1rDP.png" alt="Clickable image" width="250" height="75" class="invert-color">
+            <img src="https://i.imgur.com/YAy1rDP.png" alt="Clickable image" width="250" height="61" class="invert-color">
         </a>
 </header>
 <body>
