--- a/templates/blog.detail.html
+++ b/templates/blog.detail.html
@@ -8,7 +8,7 @@
             background: linear-gradient(to bottom, rgba(255, 255, 255, 1), {{ request.session.color|default:'rgb(115, 126, 126)' }});
               background-repeat: no-repeat;
             background-attachment: fixed;
-            height: 100vh;
+            height: 100%;
             width: 100%;
             margin: 0;
             padding: 0;
