--- a/templates/About_us.html
+++ b/templates/About_us.html
@@ -7,7 +7,7 @@
         p, h2 {
             direction: rtl;
             margin-right: 40px;
-            font-size: 2em;
+            font-size: 1.6em;
             line-height: 1.5;
         }
         h4{
@@ -18,7 +18,7 @@
         }
         h1 {
             direction: rtl;
-            font-size: 3.3em; /* 1.5 times larger than other subtitles */
+            font-size: 3em; /* 1.5 times larger than other subtitles */
             font-weight: bold; /* make the text bold */
             text-align: center; /* center the text */
         }
@@ -79,6 +79,14 @@
             margin: 0px;
 
         }
+        .container {
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: rgba(255, 255, 255, 0.15);
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
         body {
             background: linear-gradient(to bottom, rgba(255, 255, 255, 1), {{ request.session.color|default:'rgb(115, 126, 126)' }});
             background-repeat: no-repeat;
@@ -115,6 +123,7 @@
 </header>
 <body>
 
+    <div class="container">
     <h1>אודות</h1>
     <h2>הקדמה:</h2>
     <p>
@@ -139,6 +148,8 @@
                 <a href="/About_us/">About us</a>
                 <a href="{% url 'logout' %}">Sign Out</a>
             </div>
+
+    </div>
 </body>
 </html>
 
