--- a/templates/MainForum.html
+++ b/templates/MainForum.html
@@ -9,10 +9,10 @@
         background: linear-gradient(to bottom, rgba(255, 255, 255, 1), {{ request.session.color|default:'rgb(115, 126, 126)' }});
         background-repeat: no-repeat;
         background-attachment: fixed;
-        height: 100vh;
-            margin: 0;
-            padding: 0;
-            font-family: Arial, sans-serif;
+        height: 10%;
+        margin: 0;
+        padding: 0;
+        font-family: Arial, sans-serif;
         }
         .container {
             display: flex;
