--- a/templates/My_Profile.html
+++ b/templates/My_Profile.html
@@ -5,7 +5,7 @@
             background: linear-gradient(to bottom, rgba(255, 255, 255, 1), {{ request.session.color|default:'rgb(115, 126, 126)' }});
             background-repeat: no-repeat;
             background-attachment: fixed;
-            height: 100vh;
+            height: 100%;
             margin: 0;
             padding: 0;
             font-family: Arial, sans-serif;
