--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -301,8 +301,13 @@
     }
 
     .likes-symbol {
-        margin-right: 0px; /* adjust as needed */
+        margin-left: -500px;
+
     }
+    .like-button-clicked {
+    background-color: #ff0000; /* Change to the color you want */
+}
+
     </style>
 </head>
 <body>
@@ -333,7 +338,7 @@
         <p>{{ post.content }}</p>
         <button class="comment-button" id="toggle-comment-form">תגובה</button>
         <div class="like-section">
-            <button class="like-button" onclick="location.href='{% url 'like_post' post.id %}'">Like</button>
+            <button class="like-button" onclick="location.href='{% url 'like_post' post.id %}'">אהבתי</button>
             <p class="likes-symbol">💙 {{ post.likes_count }}</p>
         </div>
     </div>
@@ -372,22 +377,23 @@
     } else {
         console.log('Dark mode disabled');
     }
-        document.querySelector('.like-button').addEventListener('click', function() {
-            // Handle like button click
-        });
+    document.querySelector('.like-button').addEventListener('click', function(event) {
+    event.preventDefault();
+    this.classList.toggle('like-button-clicked');
+});
+
+document.querySelector('.like-button').addEventListener('click', function(event) {
+    event.preventDefault();
+    this.classList.add('like-button-clicked');
+});
         function toggleSidebar(event) {
         event.stopPropagation();
         const sidebar = document.getElementById('sidebar');
         sidebar.style.left = (sidebar.style.left === "0px") ? "-250px" : "0px";
     }
 
-    // Close the menu when clicking outside of it
-    document.addEventListener('click', function(event) {
-        const sidebar = document.getElementById('sidebar');
-        if (!sidebar.contains(event.target)) {
-            sidebar.style.left = "-250px";
-        }
-    });
+
+
         function toggleCreatePostForm() {
             var form = document.getElementById("create-post-form");
             form.style.display = form.style.display === "none" ? "block" : "none";
