--- a/templates/MainForum.html
+++ b/templates/MainForum.html
@@ -219,7 +219,7 @@
                 <h3> 'סמסטר א </br>
                     <button class="button-shadow" onclick="location.href='/blog/29'">חישוביות וסיבוכיות</button> <br>
                     <button class="button-shadow" onclick="location.href='/blog/30'">בטיחות תוכנה</button> <br>
-                    </br>סמסטר ב <br><button onclick="location.href='/blog/31'">פרויקט גמר</button></h3>
+                    </br>סמסטר ב <br><button class="button-shadow" onclick="location.href='/blog/31'">פרויקט גמר</button></h3>
                 <br><br><br><br>
                    <button class="button-shadow" onclick="location.href='/blog/33'">	מחפשי עבודה </button> <br>
 
