--- a/templates/MainForum.html
+++ b/templates/MainForum.html
@@ -203,7 +203,11 @@
     <span id="notification-counter"></span>
 </div>
         <div class="menu-icon" onclick="toggleSidebar(event)">☰</div>
-        <h2>{{ user.first_name }} {{ user.last_name }}, welcome to S4S Forum</h2>
+      {% if user.is_authenticated %}
+    <h2>{{ user.username }}, welcome to S4S Forum</h2>
+{% else %}
+    <h2>{{ user.first_name }} {{ user.last_name }},Welcome to S4S Forum</h2>
+{% endif %}
     </header>
     <button style="position: absolute;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 5); /* Add this line */
