--- a/templates/SignUp.html
+++ b/templates/SignUp.html
@@ -43,6 +43,20 @@
         input[type="submit"]:hover {
             background-color: #0056b3;
         }
+        .login-button {
+            display: inline-block;
+            padding: 22px 55px;
+            background-color: #4caf50;
+            color: white;
+            text-decoration: none;
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            border-radius: 4px;
+        }
+        .login-button:hover {
+            background-color: #45a049;
+        }
         .login-link {
             text-align: center;
             margin-top: 10px;
@@ -58,6 +72,7 @@
     </style>
 </head>
 <body>
+            <a href="/" class="login-button">חזרה לדף הבית</a>
 
 <div class="container">
     <h2>Sign Up</h2>
