--- a/templates/superuser_home.html
+++ b/templates/superuser_home.html
@@ -1,6 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+<style>
+     .login-button {
+            display: inline-block;
+            padding: 22px 55px;
+            background-color: #4caf50;
+            color: white;
+            text-decoration: none;
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            border-radius: 4px;
+        }
+        .login-button:hover {
+            background-color: #45a049;
+        }
+
+
+</style>
 <head>
+                <a href="/" class="login-button">חזרה לדף הבית</a>
+
     <meta charset="UTF-8">
     <title>Superuser Home</title>
 </head>
